--- a/README
+++ b/README
@@ -1,1 +1,43 @@
 This is a README file, there are many like it, but this is my own.
+
+Start with an explanation of the database and its schemas.
+The primary key for everything lies in the genome table.
+GENOME:
+Id Acccession Species Genename Version Comment Mrna_seq Protein_seq Orf_start Orf_stop Lastupdate
+  Id is auto-incremented.  Genename must be parsed out of the input database and so is not as
+  reliable as comment.  mrna_seq is the full sequence given.  protein_seq comes from the cds
+  annotation.  orf_start and orf_stop define what range we will look at later.
+Problems:
+  1)  This table is filled with 1 full copy of the genomic sequence (mrna_seq) for every
+      orf in the sequence, this is annoying for viral genomes.
+
+QUEUE
+Id Genome_id Public Params Out Done
+  Each id is unique, but the genome_id will be used to pull the sequence
+  SELECT id, genome_id, params where public='1' order by rand() limit 1
+  SELECT id, genome_id, params where done='0' order by rand() limit 1
+  should pull the parameters and genome for a random one
+  UPDATE queue set out='1' where id='xxx'
+  UPDATE queue set done='1' where id='xxx'
+  should tell the database that a given sequence is finished
+
+RNAMOTIF
+id genome_id species accession start total permissable filedata output lastupdate
+  Each id should be unique, but genome_id will come from the genome table.
+  So, in order to get all the rnamotif information for a given accession and region one would
+  SELECT * from rnamotif where genome_id='123'
+  But if you want all ORFs for an accession
+  SELECT * from rnamotif where accession='1234'
+
+NUPACK/PKNOTS/ETC
+Id Genome_id Species Accession Start Slipsite Seqlength Sequence Output Parsed Mfe Pairs Knotp Barcode Lastupdate
+  Same ideas apply.  The only time the Accession should be duplicated is when you have
+   a)  Multiple slippery sites per transcript
+   b)  Multiple ORFs per transcript
+
+BOOT
+ID Genome_id Species Accession Start Iterations Rand_method Mfe_method Mfe_mean Mfe_Sd Mfe_Se Pairs_mean Pairs_sd Pairs_se Mfe_values Lastupdate
+
+DERIVED
+ID Mfe_source Mfe_id Boot_id Accession Image Z_score Lastupdate
+Mfe_source is the source table, mfe_id is the id in that table, boot_id is the id from boot
