--- a/TODO
+++ b/TODO
@@ -16,48 +16,31 @@ IDEAS
 
 1. maybe the randomization windows not be fixed on the input sequence window that pknots or NUPACK uses to fold, but... instead, the randomization sequence windows should be the "trimmed" sequence window that corresponds to the structure plus 1 base on either side. What do you think? The expect result would be IMHO z-scores will generally increase.
 
-BOILER mySQL [NOT RUN, and NOT finished... work in progress...]
+BOILER mySQL
 
-select distinct
-    a.id,
-    a.accession,
-    a.start,
-    a.slipsite,
-    a.seqLength,
-    a.pairs,
-    a.mfe,
-    a.barcode
-from
-    pknots as a
-where
-    a.accession = 'SGDID:S0000002' and
-    a.seqLength = (
-        select max(seqLength)
-        from pknots
-        where 
-            accession = a.accession and
-            slipsite = a.slipsite and
-            start = a.start and 
-            pairs = a.pairs and 
-            barcode = a.barcode and
-            abs(round(mfe,2) - round(a.mfe,2)) < 5    
-   ) 
-group by 
-    a.accession,
-    a.start,
-    a.slipsite,
-    a.pairs,
-    a.seqLength
-order by 
-    a.accession,
-    a.start, 
-    a.slipsite, 
-    a.pairs asc,
-    a.seqLength asc
-;
-
-
-
-select id,accession,start,seqLength,sequence,mfe,pairs,barcode  from pknots where accession regexp 'S0000002' and start = 507 order by start, seqLength, pairs, mfe;
-
-    b.seqLength < a.seqLength and
+mysql> insert into pknots_temp1 
+    -> select distinct
+    ->     a.*
+    -> from
+    ->     pknots as a
+    -> where
+    ->     a.seqLength = (
+    ->         select max(seqLength)
+    ->         from pknots
+    ->         where 
+    ->             accession = a.accession and
+    ->             slipsite = a.slipsite and
+    ->             start = a.start and 
+    ->             pairs = a.pairs and 
+    ->             barcode = a.barcode and
+    ->             abs(round(mfe,2) - round(a.mfe,2)) < 5    
+    ->    ) 
+    -> group by 
+    ->     a.accession,
+    ->     a.start,
+    ->     a.slipsite,
+    ->     a.pairs,
+    ->     a.seqLength
+    -> ;
+Query OK, 80208 rows affected (7 min 15.03 sec)
+Records: 80208  Duplicates: 0  Warnings: 0
