--- a/INSTALL
+++ b/INSTALL
@@ -21,6 +21,14 @@ The fields for database_user, database_pass etc need to be changed.
 Most other settings are fine by default, but you can change pretty much
 anything from the configuration file if you desire.
 
+Make sure that apache has libapreq running.  On a Debian installation this
+may be done by symlinking /etc/apache2/mods-available/libapred to ../mods-enabled
+
+Make sure that apache has libapreq running.  On a Debian installation this
+may be done by symlinking /etc/apache2/mods-available/libapred to ../mods-enabled
+Make sure the $PRFDB_HOME/sessions symlink points somewhere real and is apache
+writeable.
+
 Finally:
 Run ./prf_daemon --setup_db
 
